test/algeff/wrong/scoped1.kk.out
warning (line 29, column 19): keyword "fun" is deprecated. Consider using "fn" instead.
test/algeff/wrong/scoped1.kk(62, 7): error: type is not polymorphic enough
 context : handler {
 ...
 }
 term : choice(xs) {
 ...
 }
 inferred type : forall<b,c,d,e1> std/core/hnd/clause1<list<b>,c,d,<nondet,state<int>|e1>,b>
 is less general than: forall<b> std/core/hnd/clause1<list<b>,b,.hnd-nondet,<nondet,state<int>|_e>,$a>
 hint : give a higher-rank type annotation to a function parameter?